# FakebookDatabase

./: README.md
p1/: createTables.sql  createViews.sql  dropTables.sql  dropViews.sql
p2/Fakebook Oracle JDBC/: Q1.sql  Q2.sql  Q3.sql  Q4.sql  Q5.sql
p2/Fakebook Oracle JDBC/project2/project2/: FakebookOracleMain.java  StudentFakebookOracle.java
p3/starter_code/: GetData.java  Makefile  query1.js  query2.js  query3.js  query4.js  query5.js  query5new.js  query6.js  query7.js  query8.js  test.js
p4/starter/: CMakeLists.txt  GHJ  Join.cpp  right_rel.txt
